# hypermodern

./: .gitignore  README.md  dev-requirements.txt  noxfile.py  py38-dev-requirements.txt  pyproject.toml  requirements.txt
src/: hello.py
src/hyper_tokuma/: __main__.py  random_wikipedia.py
tests/: test_main.py  test_random_wikipedia.py
